Different hierarchy icon between properties editor and geonodes editor #92771

Closed
opened 2021-11-03 04:31:44 +01:00 by Aditiya Afrizal · 8 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-01 19:46, hash: 348d7c35a9
Worked: ???

Short description of error
different arrow icon and it almost same color as properties background color.
see image below:
bbb.png

Exact steps for others to reproduce the error
just see image above

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: GeForce GT 630M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-01 19:46, hash: `348d7c35a9` Worked: ??? **Short description of error** different arrow icon and it almost same color as properties background color. see image below: ![bbb.png](https://archive.blender.org/developer/F11688386/bbb.png) **Exact steps for others to reproduce the error** just see image above

Added subscriber: @adfriz

Added subscriber: @adfriz
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

it almost same color as properties background color.

Because of {bfec984cf82a64a74ee86a902348a46e3c231b8f}

(Not sure about the icon shape but icons are less visible because of mentioned commit)

> it almost same color as properties background color. Because of {bfec984cf82a64a74ee86a902348a46e3c231b8f} (Not sure about the icon shape but icons are less visible because of mentioned commit)

This issue was referenced by 7c75529333

This issue was referenced by 7c755293330e8ebe8717b0a34e6031b4e3186f0d
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Vazquez self-assigned this 2021-11-05 16:26:01 +01:00
Member

Fixed!

Fixed!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92771
No description provided.